--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.1.*",
-        "laravelcollective/html": "5.1",
+        "laravelcollective/html": "~5.1",
         "intervention/image": "^2.3",
         "cviebrock/eloquent-sluggable": "^4.1",
         "rutorika/sortable": "^2.3",
