--- a/bower.json
+++ b/bower.json
@@ -1,33 +1,35 @@
 {
-  "name": "depsarkcms",
-  "version": "1.0.0",
-  "description": "Administrative interface builder for Laravel 5.1",
-  "authors": [
-    "Alexander Stoimenov <astoimenov@despark.com>"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "vendor/bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "jquery": "~2.1.4",
-    "fastclick": "~1.0.6",
-    "vminpoly": "*",
-    "AdminLTE": "admin-lte#^2.3.3",
-    "font-awesome": "fontawesome#^4.6.2",
-    "datatables": "^1.9.4",
-    "jquery-ui": "^1.11.4",
-    "select2": "^4.0.2",
-    "mjolnic-bootstrap-colorpicker": "bootstrap-colorpicker#^2.3.3",
-    "owl.carousel": "~2.0.0-beta.3",
-    "flow.js": "~2",
-    "Sortable": "sortablejs#~1.4.2",
-    "eonasdan-bootstrap-datetimepicker": "~4.17.42"
-  },
-  "devDependencies": {}
+    "name": "depsarkcms",
+    "version": "1.0.0",
+    "description": "Administrative interface builder for Laravel 5.4",
+    "authors": [
+        "Alexander Stoimenov <astoimenov@despark.com>",
+        "Ludmil Simeonov <lsimeonov@despark.com>",
+        "Anton Geshev <ageshev@despark.com>"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "vendor/bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "jquery": "~2.1.4",
+        "fastclick": "~1.0.6",
+        "vminpoly": "*",
+        "AdminLTE": "admin-lte#^2.3.3",
+        "font-awesome": "fontawesome#^4.6.2",
+        "datatables": "^1.9.4",
+        "jquery-ui": "^1.11.4",
+        "select2": "^4.0.2",
+        "mjolnic-bootstrap-colorpicker": "bootstrap-colorpicker#^2.3.3",
+        "owl.carousel": "~2.0.0-beta.3",
+        "flow.js": "~2",
+        "Sortable": "sortablejs#~1.4.2",
+        "eonasdan-bootstrap-datetimepicker": "~4.17.42"
+    },
+    "devDependencies": {}
 }
