--- a/composer.json
+++ b/composer.json
@@ -43,11 +43,7 @@
         "graham-campbell/testbench": "^3.2",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "phpspec/phpspec": "~2.1",
-        "corneltek/phprelease": "^1.3",
-        "symfony/dom-crawler": "~3.0",
-        "symfony/css-selector": "~3.0"
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "classmap": [],
