--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravelcollective/html": "~5.1",
+        "flowjs/flow-php-server": "^1.0",
         "intervention/image": "^2.3",
         "cviebrock/eloquent-sluggable": "^4.1",
         "rutorika/sortable": "^2.3",
