--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "rutorika/sortable": "^2.3",
         "doctrine/dbal": "^2.5",
         "yajra/laravel-datatables-oracle": "~7.0",
-        "spatie/laravel-permission": "^1.11"
+        "spatie/laravel-permission": "^1.11",
+        "despark/laravel-db-localization": "v3.x-dev"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.1",
@@ -49,7 +50,8 @@
     "autoload": {
         "classmap": [],
         "files": [
-            "src/helpers.php"
+            "src/helpers.php",
+            "tests/resources/TestModel.php"
         ],
         "psr-4": {
             "Despark\\Cms\\": "src/"
