Testing getForm if model hasn't got translations

--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         "classmap": [],
         "files": [
             "src/helpers.php",
-            "tests/resources/TestModel.php"
+            "tests/resources/TestModel.php",
+            "tests/resources/TestModelWithTranslations.php"
         ],
         "psr-4": {
             "Despark\\Cms\\": "src/"
