--- a/package.json
+++ b/package.json
@@ -1,62 +1,71 @@
 {
-  "name": "despark-project-starter-laravel",
-  "version": "1.1.4",
-  "description": "Frontend Backend builder for Laravel 5.1",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:despark/ignicms.git"
-  },
-  "scripts": {
-    "init": "npm i && bower i",
-    "start:fe": "gulp watch:fe",
-    "start:be": "gulp watch:be",
-    "dev:fe": "gulp dev:fe",
-    "dev:be": "gulp dev:be"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-batch": "^1.0.5",
-    "gulp-changed": "^1.1.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-env": "^0.2.0",
-    "gulp-filesize": "0.0.6",
-    "gulp-git": "^1.2.4",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rimraf": "^0.2.0",
-    "gulp-sass": "^2.3.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.4",
-    "gulp-watch": "^4.3.2",
-    "jquery": "^3.1.1",
-    "jshint": "^2.x",
-    "jshint-stylish": "^2.0.1",
-    "lodash": "^4.17.2",
-    "merge-stream": "^1.0.0",
-    "require-dir": "^0.1.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-strict-mode": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-stage-1": "^6.16.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-sass": "^2.3.2",
-    "gulp-streamify": "^1.0.2",
-    "node-bourbon": "^4.2.8",
-    "node-neat": "^1.7.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "browserify": {
-    "transform": [["babelify", { "presets": ["es2015"] }]]
-  }
+    "name": "despark-project-starter-laravel",
+    "version": "1.1.4",
+    "description": "Frontend Backend builder for Laravel 5.1",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:despark/ignicms.git"
+    },
+    "scripts": {
+        "init": "npm i && bower i",
+        "start:fe": "gulp watch:fe",
+        "start:be": "gulp watch:be",
+        "dev:fe": "gulp dev:fe",
+        "dev:be": "gulp dev:be"
+    },
+    "license": "MIT",
+    "dependencies": {
+        "gulp": "^3.9.1",
+        "gulp-batch": "^1.0.5",
+        "gulp-changed": "^1.1.1",
+        "gulp-concat": "^2.6.0",
+        "gulp-env": "^0.2.0",
+        "gulp-filesize": "0.0.6",
+        "gulp-git": "^2.3.2",
+        "gulp-if": "^1.2.5",
+        "gulp-imagemin": "^2.0",
+        "gulp-notify": "^2.2.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-rimraf": "^0.2.0",
+        "gulp-sass": "^2.3.1",
+        "gulp-sourcemaps": "^1.6.0",
+        "gulp-uglify": "^2.0.0",
+        "gulp-util": "^3.0.4",
+        "gulp-watch": "^4.3.2",
+        "jquery": "^3.1.1",
+        "jshint": "^2.x",
+        "jshint-stylish": "^2.0.1",
+        "lodash": "^4.17.2",
+        "merge-stream": "^1.0.0",
+        "require-dir": "^0.3.2"
+    },
+    "devDependencies": {
+        "babel-eslint": "^7.1.1",
+        "babel-plugin-transform-class-properties": "^6.19.0",
+        "babel-plugin-transform-strict-mode": "^6.18.0",
+        "babel-preset-es2015": "^6.18.0",
+        "babel-preset-stage-0": "^6.16.0",
+        "babel-preset-stage-1": "^6.16.0",
+        "babelify": "^7.3.0",
+        "browserify": "^13.1.1",
+        "gulp-eslint": "^3.0.1",
+        "gulp-sass": "^2.3.2",
+        "gulp-streamify": "^1.0.2",
+        "node-bourbon": "^4.2.8",
+        "node-neat": "^1.7.2",
+        "vinyl-buffer": "^1.0.0",
+        "vinyl-source-stream": "^1.1.0"
+    },
+    "browserify": {
+        "transform": [
+            [
+                "babelify",
+                {
+                    "presets": [
+                        "es2015"
+                    ]
+                }
+            ]
+        ]
+    }
 }
