--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,14 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": ">=5.4",
         "laravelcollective/html": "~5.1",
         "flowjs/flow-php-server": "^1.0",
         "intervention/image": "^2.3",
         "cviebrock/eloquent-sluggable": "^4.1",
         "rutorika/sortable": "^2.3",
         "doctrine/dbal": "^2.5",
-        "yajra/laravel-datatables-oracle": "~7.0",
+        "yajra/laravel-datatables-oracle": "~8.0",
         "spatie/laravel-permission": "^1.11",
         "despark/laravel-db-i18n": "v1.x"
     },
