--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": ">=5.4",
+        "laravel/framework": "5.4.*|5.5.*",
         "laravelcollective/html": "~5.1",
         "flowjs/flow-php-server": "^1.0",
         "intervention/image": "^2.3",
