--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     ],
     "license": "MIT",
-    "type": "project",
+    "type": "library",
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*|5.5.*",
