--- a/composer.json
+++ b/composer.json
@@ -29,23 +29,24 @@
     "type": "library",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*|5.5.*",
+        "laravel/framework": "5.6.*",
         "laravelcollective/html": "~5.1",
         "flowjs/flow-php-server": "^1.0",
         "intervention/image": "^2.3",
         "cviebrock/eloquent-sluggable": "^4.1",
-        "rutorika/sortable": "^2.3",
+        "rutorika/sortable": ">=2.3",
         "doctrine/dbal": "^2.5",
         "yajra/laravel-datatables-oracle": "~8.0",
-        "spatie/laravel-permission": "^1.11",
+        "spatie/laravel-permission": ">=1.11",
         "despark/laravel-db-i18n": "v1.x"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.1",
-        "graham-campbell/testbench": "^3.2",
+        "graham-campbell/testbench": "^5.0",
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.0",
+        "sllh/composer-versions-check": "^2.0.3"
     },
     "autoload": {
         "classmap": [],
